src/objects/RandomizationProperty__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Site_Users_To_Create_Randomization__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked, then site users will be able to create randomization form. Otherwise not.</description>
        <inlineHelpText>If this checkbox is checked, then site users will be able to create randomization form. Otherwise not.</inlineHelpText>
        <label>Allow Site Users To Create Randomization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CurrentPatientXML__c</fullName>
        <label>CurrentPatientXML</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PatientId__c</fullName>
        <label>PatientId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RunCalculationResult__c</fullName>
        <label>RunCalculationResult</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Use_Old_Randomization_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked to true, then the patient will be randomized using the code as of 8/1/2013</description>
        <inlineHelpText>If this checkbox is checked to true, then the patient will be randomized using the code as of 8/1/2013</inlineHelpText>
        <label>Use Old Randomization Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSeed1__c</fullName>
        <label>nSeed1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSeed2__c</fullName>
        <label>nSeed2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RandomizationProperty</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Randomization Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>